--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,10 +18,15 @@
 
 body {
   background-color: #f3f3f3;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
   background-color: white;
+  display: flex;
+  flex-direction: column;
   /* display: flex;
   align-items: center;
   justify-content: center;
@@ -157,16 +162,15 @@ article.product .price {
 /*Start Footer*/
 
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  bottom:0;
+  margin-top: auto;
+
 }
 footer .footer-navbar {
   padding: 10px;
   background-color: #eaeaea;
-  width: 100%;
-  position: relative;
-  bottom: 0;
+  margin-top: auto;
+
 }
 
 footer nav ul li {
@@ -339,7 +343,7 @@ form .form-group span.error {
 /* Start Shopping Cart */
 
 .footer {
-  position: absolute;
+  margin-top: auto;
   bottom: 0;
   width: 100%;
   height: 60px; /* Height of the footer */
@@ -397,8 +401,8 @@ form .form-group span.error {
     display: none;
   }
   footer{
-    position: relative;
-    width: 100%;
+    width:100%; 
+  bottom:0; 
   }
 }
 
@@ -420,8 +424,9 @@ form .form-group span.error {
     margin: auto;
   }
   footer{
-    position: relative;
-    width: 100%;
+    width:100%;  
+  bottom:0; 
+  margin-top: auto;
   }
 }
 
@@ -461,7 +466,6 @@ form .form-group span.error {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    height: 180px;
     margin: auto;
     width: 100%;
     height: 200px;
@@ -486,6 +490,11 @@ form .form-group span.error {
     width: auto;
     font: 8px;
     margin-top: 0;
+  }
+  .footer {
+    width:100%; 
+  bottom:0; 
+  margin-top: auto;
   }
 }
 
