Home product imgages and product detail fix

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,11 +16,11 @@
                         <article class="product">
                             <a href=<%=`/products/${product.id}/detail`%>>
                                 <header>
-                                    <img src=<%=`/images/products/${product.id}/detail`%> alt="" width="100%">
+                                    <img src=<%=`/images/products/${product.image}`%> alt="" width="100%">
                                 </header>
                                 <div class="info">
                                     <div class="category">
-                                        <%=`${product.category_id}`%>
+                                        <%=`${product.category}`%>
                                     </div>
                                     <div class="title">
                                         <%=`${product.name}`%>
