--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -1,29 +1,29 @@
 <header>
-    <nav class="navbar">
-        <div class="navbar-toggler">
-            <a><i class="icon fas fa-bars fa-xl"></i></a>
-        </div>
-        <div class="brand">
-            <a href="/">
-                <img src="/images/logo.png" alt="Logo" id="brand-logo">
-            </a>
-        </div>
-        <div id="myLinks" class="icons">
-            <ul>
-                <li>
-                    <a href="/admin/products">Productos</a>
-                </li>
-            </ul>
-        </div>
-        <div class="user">
-            <ul>
-                <li id="login">
-                    <a href="/admin">
-                        <i class="fa-solid fa-circle-user"></i>
-                        <span class="login"><%= user.firstName %></span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar">
+    <div class="navbar-toggler">
+      <a><i class="icon fas fa-bars fa-xl"></i></a>
+    </div>
+    <div class="brand">
+      <a href="/">
+        <img src="/images/logo.png" alt="Logo" id="brand-logo" />
+      </a>
+    </div>
+    <div id="myLinks" class="icons">
+      <ul>
+        <li>
+          <a href="/admin/products">Productos</a>
+        </li>
+      </ul>
+    </div>
+    <div class="user">
+      <ul>
+        <li id="login">
+          <a href="/admin">
+            <i class="fa-solid fa-circle-user"></i>
+            <span class="login"><%= user.name %></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
