--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -5,6 +5,12 @@
         <%- include("../partials/header.ejs") %>
             <main>
                 <h1>Perfil</h1>
+                <div>
+                    <h2>Nombre</h2>
+                </div>
+                <div>
+                    <h2>Email</h2>
+                </div>
             </main>
             <%- include('../partials/footer') %>
     </body>
