--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -13,15 +13,19 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="text" id="email" name="email" placeholder="Ej.: ejemplo@mail.com"
-                            value=<%=locals.form?.email && `${form.email}`%>>
-                        <span class="error"><%=locals.errors?.email && `${errors.email.msg}`%></span>
+                        <input type="text" id="email" name="email" placeholder="Ej.: ejemplo@mail.com" value="<%= typeof old != 'undefined' ? old.email : "" %>"/>
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="password" placeholder="Ingrese su contraseña">
-                        <span class="error"><%=locals.errors?.password && `${errors.password.msg}`%></span>
+                        <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" value="<%= typeof old != 'undefined' ? old.password : "" %>"/>
                     </div>
+                    <% if (typeof errors != 'undefined') { %>
+                        <% errors.forEach(error => { %>
+                         <ul class="error">
+                             <li> <%= error.msg %> </li>
+                         </ul>
+                        <% }) %>
+                       <% } %>
                     <div class="form-group form-settings">
                         <div class="form-options">
                             <a href="/password_reset">¿Has olvidado tu contraseña?</a>
