--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,20 +6,8 @@
     <div class="brand">
       <a href="/">
         <img src="/images/logo.png" alt="Logo" id="brand-logo" />
+        <span class="login">Flyfeet</span>
       </a>
-    </div>
-    <div id="myLinks" class="icons">
-      <ul>
-        <li>
-          <a href="/">Categorias</a>
-        </li>
-        <li>
-          <a href="/">Nuevo</a>
-        </li>
-        <li>
-          <a href="/">Ofertas</a>
-        </li>
-      </ul>
     </div>
     <div class="user">
       <ul>
