Modify admin crud

--- a/src/views/admin/product.ejs
+++ b/src/views/admin/product.ejs
@@ -26,23 +26,9 @@
                             </p>
                         </div>
                         <div class="section">
-                            <h4>Categoria</h4>
-                            <p>
-                                <%=product.category %>
-                            </p>
-                        </div>
-                        <div class="section">
                             <h4>Precio</h4>
                             <p>
-                                <%=product.price %>
-                            </p>
-                        </div>
-                        <div class="section">
-                            <h4>Color</h4>
-                            <div class="color-box" style="<%=`background: rgb(${product.colorRgb});`%>">
-                            </div>
-                            <p>
-                                <%=product.colorName %>
+                               $ <%=product.price %>
                             </p>
                         </div>
                     </div>
