--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,7 @@
         <li>
           <a href="/users/profile">
             <i class="fa-solid fa-circle-user"></i>
-            <span class="login"><%= user.name %></span>
+            <span class="login"><%= user.firstName %></span>
           </a>
         </li>
         <% } else { %>
