--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -19,6 +19,10 @@
                         <input type="password" name="password" id="password" placeholder="Ingrese su contraseña">
                         <span class="error"><%=locals.errors?.password && `${errors.password.msg}`%></span>
                     </div>
+                    <div class="form-control remember">
+                        <label for="remember-me">Recordar usuario</label>
+                        <input type="checkbox" name="rememberMe" id="remember-me">
+                    </div>
                     <div class="form-control">
                         <button type="submit">Ingresar</button>
                     </div>
