--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -20,7 +20,7 @@
         <li id="login">
           <a href="/admin">
             <i class="fa-solid fa-circle-user"></i>
-            <span class="login"><%= user.name %></span>
+            <span class="login"><%= user.firstName %></span>
           </a>
         </li>
       </ul>
