--- a/src/views/admin/productEdit.ejs
+++ b/src/views/admin/productEdit.ejs
@@ -3,6 +3,20 @@
 
     <body class="admin">
         <%- include("./partials/header.ejs") %>
+            <script>
+                function previewImage(event) {
+                    const preview = document.getElementById("preview");
+                    const file = event.target.files[0];
+                    const reader = new FileReader();
+
+                    reader.onload = function (event) {
+                        preview.src = event.target.result;
+                        preview.style.display = "block";
+                    };
+
+                    reader.readAsDataURL(file);
+                }
+            </script>
             <main>
                 <h1>Consola de administrador</h1>
                 <header>
@@ -21,13 +35,14 @@
                     </div>
                     <div class="form-control">
                         <label for="price">Precio:</label>
-                        <input type="number" name="price" id="price" value=<%=product.price %>>
+                        <input type="number" name="price" id="price" value=<%=product.price %> step="0.01">
                     </div>
                     <div class="form-control">
                         <label for="image">Imagen:
-                            <img src=<%=`/images/products/${product.image}` %> alt="Product image">
+                            <img src=<%=`/images/products/${product.image}` %> alt="Product image" id="preview">
                         </label>
-                        <input type="file" name="img" id="image" value="Imagen del producto" style="display: none;">
+                        <input type="file" name="img" id="image" value="Imagen del producto" style="display: none;"
+                            onchange="previewImage(event)">
 
                     </div>
                     <div class="form-control">
@@ -39,6 +54,7 @@
                         <button type="submit" class="error">Eliminar</button>
                     </div>
                 </form>
+
             </main>
     </body>
 
