--- a/src/views/admin/productNew.ejs
+++ b/src/views/admin/productNew.ejs
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-control">
                     <label for="price">Precio:</label>
-                    <input type="number" name="price" id="price" min="0">
+                    <input type="number" name="price" id="price" min="0" step="0.01">
                 </div>
                 <div class="form-control">
                     <label for="image">Imagen:</label>
