--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -646,3 +646,48 @@ body.admin main .detail .section .color-box {
 }
 
 /* End Admin Site */
+
+/* Start Product detail */
+body.product-detail main {
+  margin-top: 24px;
+  padding: 10px;
+}
+
+body.product-detail main header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+
+body.product-detail main .detail {
+  display: flex;
+  flex-direction: column;
+}
+
+body.product-detail main .detail .panel {
+  padding: 10px;
+}
+
+body.product-detail main .detail .section {
+  margin-bottom: 2px;
+}
+
+body.product-detail main .detail .section .color-box {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius: 4px;
+  border: #d6d6d6 solid 1px;
+}
+
+@media (min-width: 769px) {
+  body.product-detail main .detail {
+    flex-direction: row;
+  }
+
+  body.product-detail main .detail .panel {
+    width: 50%;
+  }
+}
+/* End Product detail */
