Move usr routes and controllers from index to usr

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -20,7 +20,7 @@
         </li>
         <% } else { %>
         <li>
-          <a href="/login">
+          <a href="/users/login">
             <i class="fa-solid fa-circle-user"></i>
             <span class="login">Ingresar</span>
           </a>
