--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -4,7 +4,7 @@
     <body>
         <%- include("../partials/header.ejs") %>
             <main>
-                <form action="/login" method="POST">
+                <form action="/users/login" method="POST">
                     <header>
                         <h3>INICIA SESIÓN</h4>
                     </header>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-fork">
                         ¿No tienes una cuenta aún?
-                        <a href="/register">Creá una cuenta</a>
+                        <a href="/users/register">Creá una cuenta</a>
                     </div>
                 </form>
             </main>
