--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
     <body>
         <%- include("../partials/header.ejs") %>
             <main>
-                <form action="/register" method="post">
+                <form action="/users/register" method="post">
                     <header>
                         <h3>REGÍSTRATE</h4>
                     </header>
