--- a/src/views/users/registerRedirect.ejs
+++ b/src/views/users/registerRedirect.ejs
@@ -22,7 +22,7 @@
     <!--final footer/partial-->
     <script>
       function redirect() {
-        location.href = "/login";
+        location.href = "/users/login";
       }
       setTimeout("redirect()", 3000);
     </script>
