--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <div class="form-fork">
                         ¿Ya tienes una cuenta?
-                        <a href="/login">Iniciá sesión</a>
+                        <a href="/users/login">Iniciá sesión</a>
                     </div>
                 </form>
             </main>
