Upload img in register & see it in profile

--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -12,13 +12,17 @@
                     <p>Apellido: <%= user.lastName %></p>
                 </div>
                 <div>
-                    <p>Apellido: <%= user.email %></p>
+                    <p>Email: <%= user.email %></p>
+                </div>
+                <div>
+                    <img src=<%=`/images/products/${user.images}` %> alt="" width="100%" %>>
                 </div>
                 <form action="/users/logout" method="post">
                     <input type="submit" value="Logout">
                 </form>
             </main>
             <%- include('../partials/footer') %>
+        <script>console.log(user.images)</script>
     </body>
 
     </html>
