--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -25,6 +25,10 @@
                         value="<%= typeof old != 'undefined' ? old.email : "" %>"/>
                     </div>
                     <div class="form-group">
+                        <label for="image">Image:</label>
+                        <input type="file" id="image" name="image" accept="image/*">
+                    </div>
+                    <div class="form-group">
                         <label for="password">Contraseña:</label>
                         <input requiered type="password" id="password" name="password" placeholder="Ingrese su contraseña">
                     </div>
