admin users interface

--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -13,12 +13,15 @@
         <li>
           <a href="/admin/products">Productos</a>
         </li>
+        <li>
+          <a href="/admin/users">Usuarios</a>
+        </li>
       </ul>
     </div>
     <div class="user">
       <ul>
         <li id="login">
-          <a href="/admin">
+          <a href="/users/profile">
             <i class="fa-solid fa-circle-user"></i>
             <span class="login"><%= user.firstName %></span>
           </a>
