--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -30,6 +30,12 @@
                            $ <%=product.price %>
                         </p>
                     </div>
+                    <div class="section">
+                        <form action="/" method="post">
+                            <input type="submit" value="Agregar al Carrito">
+                        </form>
+                    </div>
+                    
                 </div>
             </div>
             </div>
