--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label for="image">Image:</label>
-                        <input type="file" id="image" name="image" accept="image/*">
+                        <input type="file" id="image" name="img" accept="image/*">
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña:</label>
