--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -15,7 +15,7 @@
                     <p>Email: <%= user.email %></p>
                 </div>
                 <div>
-                    <img src=<%=`/images/products/${user.images}` %> alt="" width="100%" %>>
+                    <img src=<%=`/images/users/${user.images}` %> alt="" width="100%" %>>
                 </div>
                 <form action="/users/logout" method="post">
                     <input type="submit" value="Logout">
